Improve safety requests code
